# resilient-stt

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml  release-please.yml
alignment/: __init__.py  base.py  optional_aligner.py  qwen_aligner.py
asr/: endpoint_client.py  fallback_worker.py  normalizer.py  openai_request.py  openrouter_request.py  probe.py
core/: audio.py  chunking.py  privacy.py  schema.py  timestamps.py  vad.py
diarization/: pyannote_provider.py  speaker_assignment.py
docs/: cli.md  design.md
orchestrator/: __init__.py  asr_discovery.py  config.py  main.py  pipeline.py
repair/: __init__.py  llm_repair.py  repair_prompts.py  repair_validation.py
scripts/: bootstrap_qwen_asr_fallback.py  bootstrap_vllm_qwen3_asr.py
src/resilient_stt/: __init__.py
src/resilient_stt/alignment/: base.py  optional_aligner.py  qwen_aligner.py
src/resilient_stt/asr/: __init__.py  endpoint_client.py  fallback_worker.py  normalizer.py  probe.py  router.py
src/resilient_stt/core/: __init__.py  audio.py  chunking.py  exporters.py  schema.py  silero_vad.py  stitching.py  vad.py
src/resilient_stt/diarization/: __init__.py  pyannote_provider.py  speaker_assignment.py
src/resilient_stt/orchestrator/: asr_discovery.py  config.py  main.py  openai_defaults.py  openrouter_defaults.py  pipeline.py
src/resilient_stt/repair/: llm_repair.py  repair_validation.py
src/resilient_stt/workers/: __init__.py
src/resilient_stt/workers/qwen_transformers_service/: README.md  __init__.py  server.py
tests/: test_asr_discovery.py  test_audio_enhance.py  test_fallback_worker_paths.py  test_openai_defaults.py  test_openai_request.py  test_openrouter_request.py  test_pause_aligned_chunking.py  test_pipeline_happy_path.py  test_privacy.py  test_pyannote_provider.py  test_repair_validation.py  test_vad_and_chunking.py
workers/: README.md
workers/parakeet_openai_service/: README.md
workers/qwen_transformers_service/: README.md  server.py
workers/qwen_vllm_service/: README.md
workers/whisper_openai_service/: README.md
