[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-stt"
version = "0.4.1"
description = "Speech-To-Text pipeline supporting all OpenAI-compatible Automatic Speech Recognition providers with added resilience and metadata through LLM-powered transcript repair, audio preprocessing, vad, and pyannote diarization"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "gitcommitshow" }]
keywords = [
    "speech-to-text",
    "asr",
    "transcription",
    "diarization",
    "openai",
    "hinglish",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "webrtcvad>=2.0.10",
    "python-dotenv>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/gitcommitshow/resilient-stt"
Repository = "https://github.com/gitcommitshow/resilient-stt"
Documentation = "https://github.com/gitcommitshow/resilient-stt/blob/main/README.md"
Issues = "https://github.com/gitcommitshow/resilient-stt/issues"

[project.optional-dependencies]
# pyannote.audio 4.x requires torch>=2.8. Apple Silicon: Metal MPS (see README).
# Not installable on macOS Intel (no torch>=2.8 wheels); use --skip-diarization there.
diarization = [
    "pyannote.audio>=4.0,<5; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torch>=2.8,<3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]
dev = [
    "pytest>=8",
]
# Silero VAD (MIT) — Qwen3-ASR-Toolkit default; requires torch.
silero = [
    "silero-vad>=5.1",
    "torch>=2.8,<3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]
# Silero VAD + pyannote diarization + torch (typical Apple Silicon / Linux setup).
full = [
    "silero-vad>=5.1",
    "pyannote.audio>=4.0,<5; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torch>=2.8,<3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]

[project.scripts]
resilient-stt = "resilient_stt.orchestrator.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["resilient_stt*"]

[tool.uv]
# Resolve only for platforms we support for diarization (avoids unsatisfiable darwin/x86_64 splits).
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
